# CourseProjects

./: .gitignore  README.md
CourseProject1/: Course.sln  Course.vcxproj  task1.cpp
CourseProject10/: CMakeLists.txt  database.db  main.cpp
CourseProject11/: CMakeLists.txt  main.cpp  queue.h
CourseProject12/: CMakeLists.txt  main.cpp
CourseProject13/: CMakeLists.txt  Queue.h  main.cpp
CourseProject14/: CMakeLists.txt  main.cpp
CourseProject15/: CMakeLists.txt  main.cpp
CourseProject16/: CMakeLists.txt  OwnString.cpp  OwnString.h  TextView.cpp  TextView.h  main.cpp
CourseProject17/: CMakeLists.txt  SharedPtr.h  main.cpp
CourseProject2/: CourseProject2.sln  CourseProject2.vcxproj  Source.cpp  String.cpp  String.h
CourseProject2/x64/Debug/: CourseProject2.exe.recipe  CourseProject2.ilk  CourseProject2.vcxproj.FileListAbsolute.txt  vc143.idb
CourseProject3/: CourseProject3.sln  CourseProject3.vcxproj  Source.cpp
CourseProject4and6/: CMakeLists.txt  Source.cpp  main.cpp
CourseProject4and6/abstractClass/: WorkerOfCompany.cpp  WorkerOfCompany.h
CourseProject4and6/interface/: ICompany.h  IEmployee.h
CourseProject4and6/realizationOfClass/: Administrator.cpp  Administrator.h  Manager.cpp  Manager.h  Programer.cpp  Programer.h
CourseProject5/: Array.h  CourseProject5.sln  CourseProject5.vcxproj  CourseProject5.vcxproj.filters  Source.cpp
CourseProject7/: CMakeLists.txt  main.cpp
CourseProject8/: CMakeLists.txt  Currnecy.h  exchangeRates.txt  main.cpp  valuta.cpp  valuta.h
CourseProject9/: CMakeLists.txt  main.cpp
(+18 files in other folders)
